--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,19 @@
 }
 
 .wrapper {
-  box-sizing: border-box;
   width: 1024px;
   margin: 0 auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  box-sizing: border-box;
+  font-family: "Times New Roman", "Times", serif;
+  font-size: 17px;
   color: black;
+  background-color: rgba(240, 237, 241, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .contact-inf {
+  background: rgba(237, 234, 240, 0.75);
   border-bottom: 3px solid rgba(108, 26, 147, 1); 
-  background: rgba(206, 242, 242, 1);
 }
 
 .contact-inf div {
@@ -23,9 +25,7 @@
 }
 
 img {
-  width: 150px;
-  height: 150px;
-  border-radius: 150px;
+  border-radius: 100%;
 }
 
 .name {
@@ -48,7 +48,7 @@ img {
   list-style: none;
 }
 
-.contact ul li a:hover { 
+a:hover { 
 	color: rgba(168, 54, 220, 1);
 }
 
@@ -57,19 +57,23 @@ img {
 }
 
 section {
+  padding: 10px 0;
   border-bottom: 1px groove rgba(209, 179, 223, 0.7); 
-  /* margin-bottom: 10px; */
-  padding: 10px 0px;
 }
 
 section:first-child {
-  border-bottom: none;
   margin-bottom: 20px;
+  border-bottom: none;
 }
 
 section:last-child {
+  margin-bottom: 0;
   border-bottom: none;
 }
+
+section h2  + p {
+  line-height: 23px;
+} 
 
 .section-title {
   float: left;
@@ -79,6 +83,7 @@ section:last-child {
 .section-content {
   float: right;
   width: 75%;
+  line-height: 23px;
 }
 
 .clear {
@@ -89,14 +94,18 @@ section:last-child {
   margin-bottom: 25px;
 }
 
+.experience:last-child {
+  margin-bottom: 0;
+}
+
 .period {
-  font-size: 14px;
-  font-style: italic;
   margin-bottom: 3px;
+  font-size: 15px;
+  font-style: italic;
 }
 
 footer {
-  border-top: 3px solid rgba(108, 26, 147, 1); 
-  background: rgba(206, 242, 242, 1);
   height: 70px;
+  border-top: 3px solid rgba(108, 26, 147, 1); 
+  background: rgba(237, 234, 240, 0.75);
 }
